HTML düzeltmeleri yapıldı ve game.png görseli eklendi.

--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
     <h1>Colonel Blotto Game</h1>
    
   </header>
+  
 
   <section>
     <h2>🎮 Oyun Hakkında Bilgi</h2>
+    <img src="game.png" alt="Colonel Blotto Game Visual">
     <p>
       <strong>Colonel Blotto Game</strong>, iki oyuncunun (örneğin iki komutanın) belirli miktarda kaynak (asker, para, enerji vb.) 
       üzerinde stratejik dağılım yaptığı klasik bir sıfır toplamlı oyundur. Oyuncular kaynaklarını 
